--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,20 @@
             },
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch demo client",
+            "cwd": "${workspaceFolder}/demo-client",
+            "program": "${workspaceFolder}/demo-client/index.js",
+            "env": {
+            },
+            "outFiles": [
+              "${workspaceFolder}/demo-client/dist/**/*.js"
+            ],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
         }
     ]
 }
